实现了头部和搜索功能
TODO: 灰机wiki的搜索还有问题

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "九州主页",
+  "name": "九州第一群出品的九州资源汇总黄页",
   "icons": [
     {
       "src": "favicon.ico",
